--- a/MySQLDapperDebug.Tests/MySQLDapperDebug.Tests.csproj
+++ b/MySQLDapperDebug.Tests/MySQLDapperDebug.Tests.csproj
@@ -89,9 +89,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AppControllerTest.cs" />
+    <Compile Include="Mapping\ServiceFirebirdTest.cs" />
     <Compile Include="Mapping\ServiceMySQLTest.cs" />
+    <Compile Include="Mapping\ServicePostGRETest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
