--- a/MySQLDapperDebug/MySQLDapperDebug.csproj
+++ b/MySQLDapperDebug/MySQLDapperDebug.csproj
@@ -140,12 +140,13 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\AppController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Mapping\cipprocessdataDAOFactory.cs" />
     <Compile Include="Mapping\CipprocessdataServiceMySQL.cs" />
+    <Compile Include="Mapping\CipprocessdataServicePostGRE.cs" />
     <Compile Include="Models\cipprocessdata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
